--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":[],"fileToBeOpened":"nxtTrendzCartFeatures/src/context/CartContext.js"}
+{"ignoredFilesOrFolders":[],"openFiles":[],"fileToBeOpened":""}tTrendzCartFeatures/src/context/CartContext.js"}
