--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-scripts": "4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint .",
