--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "chalk": "4.1.0",
     "history": "5.0.0",
     "js-cookie": "3.0.0",
-    "msw": "0.33.0",
+    "msw": "2.7.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
@@ -23,16 +23,16 @@
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-prettier": "3.3.1",
     "eslint-config-react-app": "6.0.0",
+    "eslint-plugin-prettier": "3.3.1",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint .",
